vlib/v/checker/tests/nil_to_option_err.vv
struct Test {
mut:
	a ?int = unsafe { nil }
}

fn main() {
	mut a := ?int(none)
	a = unsafe { nil }

	mut b := Test{}
	b.a = unsafe { nil }
}
